--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,9 @@ dependencies:
   flutter: 
     sdk: flutter
   google_fonts: ^4.0.3
+  cached_network_image: ^3.2.3
+  flutter_staggered_grid_view: ^0.6.2
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies: 
   flutter_lints: 2.0.1
