--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cached_network_image: ^3.2.3
   flutter_staggered_grid_view: ^0.6.2
   flutter_rating_bar: ^4.0.1
+  fluttertoast: ^8.1.3
 
 dev_dependencies: 
   flutter_lints: 2.0.1
