--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   flutter_staggered_grid_view: ^0.6.2
   flutter_rating_bar: ^4.0.1
   fluttertoast: ^8.1.3
+  shimmer: ^2.0.0
+  lottie: ^2.2.0
 
 dev_dependencies: 
   flutter_lints: 2.0.1
@@ -23,4 +25,5 @@ dev_dependencies:
 
 flutter: 
   uses-material-design: true
-
+  assets:
+    - assets/lotties/
