--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   fluttertoast: ^8.1.3
   shimmer: ^2.0.0
   lottie: ^2.2.0
+  connectivity_plus: ^3.0.3
 
 dev_dependencies: 
   flutter_lints: 2.0.1
